--- a/views/index.html
+++ b/views/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+  	<meta charset="utf-8">
+    <title>Oband</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   	<script type="text/javascript" src="/javascripts/app.js"></script>
   	<link rel="stylesheet" href="css/main.css"/>
   </head>
-  <body>
-  	<p>Hello World!</p>
+  <body onload="init()">
+  	<canvas id="blankSpace" width="200" height="100"></canvas>
   </body>
 </html>
