--- a/views/index.html
+++ b/views/index.html
@@ -3,11 +3,15 @@
   <head>
   	<meta charset="utf-8">
     <title>Oband</title>
+    <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   	<script type="text/javascript" src="/javascripts/app.js"></script>
   	<link rel="stylesheet" href="css/main.css"/>
   </head>
   <body onload="init()">
+  	<script>
+  		var socket = io();
+	</script>
   	<canvas id="blankSpace" width="200" height="100"></canvas>
   </body>
 </html>
