--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,7 @@
     <title>Oband</title>
     <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascripts/startScreen.js"></script>
   	<script type="text/javascript" src="/javascripts/game.js"></script>
   	<link rel="stylesheet" href="css/main.css"/>
   </head>
