--- a/views/index.html
+++ b/views/index.html
@@ -5,11 +5,15 @@
     <title>Oband</title>
     <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script type="text/javascript" src="/javascripts/gf.js"></script>
+    <script type="text/javascript" src="/javascripts/app2.js"></script>
+    <!--  
     <script type="text/javascript" src="/javascripts/startScreen.js"></script>
   	<script type="text/javascript" src="/javascripts/game.js"></script>
+    -->
   	<link rel="stylesheet" href="css/main.css"/>
   </head>
-  <body onload="init()">
-  	<canvas id="blankSpace" width="200" height="100"></canvas>
+  <body onload="main()">
+  	<!-- <canvas id="blankSpace" width="200" height="100"></canvas> -->
   </body>
 </html>
