--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,11 @@
     <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   	<script type="text/javascript" src="/javascripts/app.js"></script>
+    <script src="//connect.soundcloud.com/sdk.js"></script>
   	<link rel="stylesheet" href="css/main.css"/>
   </head>
   <body onload="init()">
+    <a href="#" id="test">TEST</a>
   	<canvas id="blankSpace" width="200" height="100"></canvas>
   </body>
 </html>
