redid UI in jquery, using foundation for styling. made route for song call to db, which doesnt do anything yet. socket stuff not yet implemented on this

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,3 +2,39 @@
 	box-sizing: border-box;
 	margin: 0;
 }
+
+#home, #omsetup {
+	text-align: center;
+}
+
+#home button {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 20%;
+}
+
+#diff-col, #inst-col, #song-col {
+	position: relative;
+	float: left;
+	width: 33%;
+}
+
+#diff-col button, #inst-col button {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
+
+#ominfo {
+	position: relative;
+	float: left;
+	width: 60%;
+	text-align: left;
+	margin-left: 8%;
+}
+
+#ominfo span {
+	font-weight: bold;
+}
