--- a/views/index.html
+++ b/views/index.html
@@ -3,17 +3,13 @@
   <head>
   	<meta charset="utf-8">
     <title>Oband</title>
-    <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    <script type="text/javascript" src="/javascripts/gf.js"></script>
-    <script type="text/javascript" src="/javascripts/singlep.js"></script>
-    <script type="text/javascript" src="/javascripts/main.js"></script>
-    <!--  
-    <script type="text/javascript" src="/javascripts/startScreen.js"></script>
-  	<script type="text/javascript" src="/javascripts/game.js"></script>
-    -->
-  	<link rel="stylesheet" href="css/main.css"/>
+    <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
+    <link rel="stylesheet" href="css/foundation.min.css"/>
+    <link rel="stylesheet" href="css/main.css"/>
   </head>
-  <body onload="main()">
+  <body onload='main()'>
+    <div id="content"></div>
   </body>
+  <script type="text/javascript" src="/javascripts/app.js"></script>
 </html>
