--- a/public/templates/end.html
+++ b/public/templates/end.html
@@ -1,7 +1,7 @@
 <div id='end'>
 <h1>Game Over</h1>
-  <button>Replay</button>
-  <button>New Game</button>
+  <button id='restart'>Replay</button>
+  <button id='new'>New Game</button>
   <p>Your score: <span id='player1'></span></p>
   <p>Opponent score: <span id='player2'></span></p>
 </div>
