got UI fully function, now with sockets, although theres some bugs. routes just send back . because theres no db calls yet

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,6 +14,14 @@
 	width: 20%;
 }
 
+#number {
+	text-align: left;
+}
+
+#number span {
+	font-weight: bold;
+}
+
 #diff-col, #inst-col, #song-col {
 	position: relative;
 	float: left;
