--- a/public/templates/online.html
+++ b/public/templates/online.html
@@ -1,4 +1,5 @@
 <div id='omsetup'>
+  <p id='number'><span></span> people online</p>
   <div id='diff-col'>
     <h3>Difficulty</h3>
     <button>Easy</button>
@@ -15,7 +16,8 @@
   </div>
   <div id='song-col'>
     <h3>Pick a Song!</h3>
-    <button>I'm on a boat</button>
+    <button>A</button>
+    <button>B</button>
   </div>
   <div id='ominfo'>
     <p>Difficulty: <span id='diff'></span></p>
@@ -23,5 +25,6 @@
     <p>Song: <span id='song'></span></p>
     <button id='start'>Start New Game</button>
     <button id='join'>Join Game</button>
+    <p id='status'></p>
   </div>
 </div>
