Generate the notes of a song

--- a/views/beats.hbs
+++ b/views/beats.hbs
@@ -1,3 +1,4 @@
+<script type="text/javascript" src='javascripts/id3.js'></script>
 <script type="text/javascript" src='javascripts/remix.js'></script>
 <script type="text/javascript" src='javascripts/beats.js'></script>
 {{title}}
