--- a/views/index.html
+++ b/views/index.html
@@ -6,8 +6,8 @@
     <script src="https://cdn.socket.io/socket.io-1.3.4.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script type="text/javascript" src="/javascripts/gf.js"></script>
-    <script type="text/javascript" src="/javascripts/views.js"></script>
-    <script type="text/javascript" src="/javascripts/main.js"></script>
+    <!-- <script type="text/javascript" src="/javascripts/views.js"></script> -->
+    <script type="text/javascript" src="/javascripts/game.js"></script>
     <!--  
     <script type="text/javascript" src="/javascripts/startScreen.js"></script>
   	<script type="text/javascript" src="/javascripts/game.js"></script>
