ending screen created

--- a/public/templates/end.html
+++ b/public/templates/end.html
@@ -2,6 +2,6 @@
 <h1>Game Over</h1>
   <button id='restart'>Replay</button>
   <button id='new'>New Game</button>
-  <p>Your score: <span id='player1'></span></p>
-  <p>Opponent score: <span id='player2'></span></p>
+  <p>Your score: <span id='player1score'>-</span></p>
+  <p>Opponent score: <span id='player2score'></span></p>
 </div>
