--- a/views/index.html
+++ b/views/index.html
@@ -18,5 +18,5 @@
   <body onload='main()'>
     <div id="content"></div>
   </body>
-  <script type="text/javascript" src="/javascripts/app.js"></script>
+  <!-- // <script type="text/javascript" src="/javascripts/app.js"></script> -->
 </html>
