--- a/public/templates/home.html
+++ b/public/templates/home.html
@@ -1,6 +1,6 @@
 <div id='home'>
 <h1>Oband</h1>
-  <button>Singleplayer</button>
+  <button id='singlep'>Singleplayer</button>
   <button>Local Multiplayer</button>
   <button id='online'>Online Multiplayer</button>
   <button>Leaderboards</button>
