online mode now says how many open rooms there are for each song, and doesnt let you join songs for which there are no open rooms

--- a/public/templates/single.html
+++ b/public/templates/single.html
@@ -22,7 +22,7 @@
     <p>Difficulty: <span id='diff'></span></p>
     <p>Instrument: <span id='inst'></span></p>
     <p>Song: <span id='song'></span></p>
-    <button id='singleStart'>Start New Game</button>
+    <button id='singleStart'>Start Game</button>
     <p id='status'></p>
   </div>
 </div>
