--- a/public/templates/online.html
+++ b/public/templates/online.html
@@ -16,15 +16,21 @@
   </div>
   <div id='song-col'>
     <h3>Pick a Song!</h3>
-    <button>A</button>
-    <button>B</button>
+    <div>
+      <button>A</button>
+      <p>(<span id='A'>0</span> open rooms)</p>
+    </div>
+    <div>
+      <button>B</button>
+      <p>(<span id='B'>0</span> open rooms)</p>
+    </div>
   </div>
   <div id='ominfo'>
     <p>Difficulty: <span id='diff'></span></p>
     <p>Instrument: <span id='inst'></span></p>
     <p>Song: <span id='song'></span></p>
-    <button id='start'>Start New Game</button>
-    <button id='join'>Join Game</button>
+    <button id='start'>Create New Game</button>
+    <button id='join'>Join Existing Game</button>
     <p id='status'></p>
   </div>
 </div>
