--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="/javascripts/game.js"></script>
   </head>
   <body onload='main()'>
-    {{body}}
+    {{{body}}}
   </body>
   <script type="text/javascript" src="/javascripts/app.js"></script>
   <script type="text/javascript" src="/javascripts/beats.js"></script>
