got rid of obselete instrument stuff. end game screen now works as far as I can tell

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -15,9 +15,8 @@
 <div id='home'>
   <h1>Oband</h1>
   <button id='singlep'>Singleplayer</button>
-  <button>Local Multiplayer</button>
   <button id='online'>Online Multiplayer</button>
   <button>Leaderboards</button>
   <button id='help'>Help</button>
-  <p hidden id='help_info'>You probably need some help bruh</p>
+  <p hidden id='help_info'>Please log in to start playing. Click singleplayer to play by yourself, or online multiplayer to play against someone online.</p>
 </div>
