backend scaffold done; need to search db for user's high score and make a sorted list

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -16,7 +16,7 @@
   <h1>Oband</h1>
   <button id='singlep'>Singleplayer</button>
   <button id='online'>Online Multiplayer</button>
-  <button>Leaderboards</button>
+  <a class='button' href='/leaderboard'>Leaderboards</a>
   <button id='help'>Help</button>
   <p hidden id='help_info'>Please log in to start playing. Click singleplayer to play by yourself, or online multiplayer to play against someone online.</p>
 </div>
