--- a/views/leaderboard.handlebars
+++ b/views/leaderboard.handlebars
@@ -14,6 +14,6 @@
 </nav>  
 <ul> 
 {{#each score}}
-  <li><h3>{{this.user}}</h3> <p>{{this.highscore}}</p></li>
+  <li><h3>{{this.user}}</h3> <p>{{this.score}}</p></li>
 {{/each}}
 </ul>
