--- a/views/online.handlebars
+++ b/views/online.handlebars
@@ -25,11 +25,11 @@
     <div id='song-col'>
       <h3>Pick a Song!</h3>
       <div>
-        <button>A</button>
+        <button>Ok Go</button>
         <p>(<span id='A'>0</span> open rooms)</p>
       </div>
       <div>
-        <button>B</button>
+        <button>Kings of Summer</button>
         <p>(<span id='B'>0</span> open rooms)</p>
       </div>
     </div>
