--- a/views/single.handlebars
+++ b/views/single.handlebars
@@ -24,7 +24,7 @@
     <div id='song-col'>
       <h3>Pick a Song!</h3>
       <button>Ok Go</button>
-      <button>Ok Go</button>
+      <button>Kings of Summer</button>
     </div>
     <div id='singleInfo'>
       <p>Difficulty: <span id='diff'></span></p>
