--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,6 +7,11 @@
 	text-align: center;
 }
 
+h1 {
+	position: relative;
+	text-align: center;
+}
+
 #name {
 	color: #fff;
 	position: relative;
@@ -14,6 +19,12 @@
 	margin-top: .75%;
 	margin-right: 5%;
 	font-size: 80%;
+}
+
+ul li#name {
+	position: absolute;
+	right: 0px;
+	text-align: center;
 }
 
 #home button {
