--- a/views/online.handlebars
+++ b/views/online.handlebars
@@ -29,7 +29,7 @@
         <p>(<span id='A'>0</span> open rooms)</p>
       </div>
       <div>
-        <button>Kings of Summer</button>
+        <button>Sail</button>
         <p>(<span id='B'>0</span> open rooms)</p>
       </div>
     </div>
