--- a/public/css/main.css
+++ b/public/css/main.css
@@ -73,3 +73,17 @@ a.button {
 #ominfo span, #singleInfo span {
 	font-weight: bold;
 }
+
+ul {
+	text-align: center;
+	list-style-type: none; 
+}
+
+ul li h3 {
+	font-weight: bold;
+	text-decoration: none;
+}
+
+ul li p {
+	margin-bottom: 2.5%;
+}
