changed songs up

--- a/views/online.handlebars
+++ b/views/online.handlebars
@@ -25,12 +25,16 @@
     <div id='song-col'>
       <h3>Pick a Song!</h3>
       <div>
-        <button>Ok Go</button>
+        <button>Madness</button>
         <p>(<span id='A'>0</span> open rooms)</p>
       </div>
       <div>
         <button>Sail</button>
         <p>(<span id='B'>0</span> open rooms)</p>
+      </div>
+      <div>
+        <button>Intro</button>
+        <p>(<span id='C'>0</span> open rooms)</p>
       </div>
     </div>
     <div id='ominfo'>
