--- a/views/single.handlebars
+++ b/views/single.handlebars
@@ -23,8 +23,9 @@
     </div>
     <div id='song-col'>
       <h3>Pick a Song!</h3>
-      <button>Ok Go</button>
+      <button>Madness</button>
       <button>Sail</button>
+      <button>Intro</button>
     </div>
     <div id='singleInfo'>
       <p>Difficulty: <span id='diff'></span></p>
